# vscdt

./: .dprint.jsonc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/crawl/: __init__.py
src/crawl/aiorequests/: __init__.py  _httpx.py
src/crawl/selector/: __init__.py  _html.py  _json.py
tests/: test_example.py
tests/unit/: test_001_crawl_selector.py  test_002_crawl_aiorequests.py  test_999_crawl.py
