[project]
name = "crawl"
version = "0.0.1"
authors = [
    { name = "zirohanabusa", email = "103222144+zirohanabusa@users.noreply.github.com" }
]
readme = "README.md"
# https://devguide.python.org/versions/
requires-python = ">=3.13, <4"
dependencies = [
  "pyprojroot",
  "python-dotenv",
  "pydantic",
  "aiofiles",
  "httpx[http2,brotli,zstd]",
  "lxml",
  "cssselect",
  "beautifulsoup4",
  "jsonpath-ng",
  "jmespath",
  "playwright",
]

[project.scripts]
hello = "crawl:hello"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
  "mypy",
  "pytest",
  "pytest-aiohttp",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-playwright",
  "types-aiofiles",
]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "I", # isort
]
ignore = [
  "E501", # line too long
  "F401", # imported but unused
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN201", "N802", "F401", "ARG"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
